# kalibr_ros2

./: LICENSE  README.md  build_workspace.sh
src/aslam_backend/: CMakeLists.txt  package.xml
src/aslam_backend_expressions/: CMakeLists.txt  package.xml
src/aslam_backend_python/: CMakeLists.txt  package.xml  setup.py
src/aslam_cameras/: CMakeLists.txt  package.xml
src/aslam_cameras_april/: CMakeLists.txt  package.xml  setup.py
src/aslam_cameras_april/src/: GridCalibrationTargetAprilgrid.cpp
src/aslam_cv_backend/: CMakeLists.txt  package.xml
src/aslam_cv_backend_python/: CMakeLists.txt  package.xml  setup.py
src/aslam_cv_backend_python/python/aslam_cv_backend/: __init__.py
src/aslam_cv_error_terms/: CMakeLists.txt  package.xml
src/aslam_cv_python/: CMakeLists.txt  package.xml  setup.py
src/aslam_cv_serialization/: CMakeLists.txt  package.xml
src/aslam_imgproc/: CMakeLists.txt  package.xml
src/aslam_splines/: CMakeLists.txt  package.xml
src/aslam_splines_python/: CMakeLists.txt  package.xml  setup.py
src/aslam_time/: CMakeLists.txt  package.xml
src/bsplines/: CMakeLists.txt  package.xml
src/bsplines_python/: CMakeLists.txt  package.xml  setup.py
src/ethz_apriltag2/: CMakeLists.txt  package.xml
src/incremental_calibration/: CMakeLists.txt  package.xml
src/incremental_calibration_python/: CMakeLists.txt  package.xml  setup.py
src/incremental_calibration_python/src/incremental_calibration/: __init__.py
src/kalibr_imu_camera/: CAMERA_CALIBRATION.md  CMakeLists.txt  MULTI_IMU_CALIBRATION.md  README.md  package.xml  setup.py
src/kalibr_imu_camera/config/: camchain_example.yaml  example_cameras.yaml  imu0_example.yaml  imu1_example.yaml  imu_example.yaml  target_april_example.yaml  target_checkerboard_example.yaml
src/kalibr_imu_camera/launch/: calibrate_cameras.launch.py  calibrate_imu_camera.launch.py  calibrate_multi_imu.launch.py
src/kalibr_imu_camera/python/: kalibr_calibrate_imu_camera
src/kalibr_imu_camera/python/kalibr_common/: ImageDatasetReader.py  ImuDatasetReader.py  TargetExtractor.py
src/kalibr_imu_camera/python/kalibr_imu_camera_calibration/: IccSensors.py
src/kalibr_imu_camera/scripts/: kalibr_calibrate_cameras  test_multi_imu.sh
src/numpy_eigen/: CMakeLists.txt  package.xml  setup.py
src/python_module/: CMakeLists.txt  package.xml  setup.py
src/sm_boost/: CMakeLists.txt  package.xml
src/sm_boost/include/boost/: portable_binary_archive.hpp
src/sm_boost/src/: portable_binary_oarchive.cpp
src/sm_common/: CMakeLists.txt  package.xml
src/sm_eigen/: CMakeLists.txt  package.xml
src/sm_kinematics/: CMakeLists.txt  package.xml
src/sm_logging/: CMakeLists.txt  package.xml
src/sm_matrix_archive/: CMakeLists.txt  package.xml
src/sm_opencv/: CMakeLists.txt  package.xml
src/sm_property_tree/: CMakeLists.txt  package.xml
src/sm_python/: CMakeLists.txt  package.xml  setup.py
src/sm_random/: CMakeLists.txt  package.xml
src/sm_timing/: CMakeLists.txt  package.xml
src/sparse_block_matrix/: CMakeLists.txt  package.xml
