<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>numpy_eigen</name>
  <version>1.0.0</version>
  <description>Numpy-Eigen Conversion with Boost.Python</description>
  <maintainer email="kalibr@ethz.ch">Kalibr Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>libboost-python-dev</depend>
  <depend>eigen</depend>
  <depend>python3-numpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
